--- a/index.html
+++ b/index.html
@@ -3,38 +3,350 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Cobra y recibi todos los pagos al instante | Nave</title>
+    <title>Cobra y recibi los pagos al instante | Nave</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header-container">
-        <nav>
-          <ul class="header__nav-list">
-            <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-item-a"
-                >Medios de cobro</a
+    <header>
+      <nav>
+        <div class="container-nav">
+          <div class="logo">
+            <a href="https://navenegocios.ar/home">
+              <img
+                src="./images/Logo Nave.jpg"
+                alt="Logo de Nave Negocios - Inicio"
+              />
+            </a>
+          </div>
+
+          <div class="container-nav-Mobile">
+            <div class="menu-icon">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                class=""
               >
-            </li>
-            <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-item-a"
-                >Más Soluciones</a
-              >
-            </li>
-            <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-item-a">Beneficios</a>
-            </li>
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M1 6C1 5.30964 1.55964 4.75 2.25 4.75H21.75C22.4404 4.75 23 5.30964 23 6C23 6.69036 22.4404 7.25 21.75 7.25H2.25C1.55964 7.25 1 6.69036 1 6Z"
+                  fill="#333333"
+                ></path>
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M1 12C1 11.3096 1.55964 10.75 2.25 10.75H21.75C22.4404 10.75 23 11.3096 23 12C23 12.6904 22.4404 13.25 21.75 13.25H2.25C1.55964 13.25 1 12.6904 1 12Z"
+                  fill="#333333"
+                ></path>
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M1 18C1 17.3096 1.55964 16.75 2.25 16.75H21.75C22.4404 16.75 23 17.3096 23 18C23 18.6904 22.4404 19.25 21.75 19.25H2.25C1.55964 19.25 1 18.6904 1 18Z"
+                  fill="#333333"
+                ></path>
+              </svg>
+            </div>
+
+            <div class="logo-mobile">
+              <img
+                src="./images/LogoNave-Mobile.jpg"
+                alt="Logo Nave Negocios para Mobil"
+              />
+            </div>
+          </div>
+
+          <ul class="link-list">
+            <li class="list-object"><a href="#">Medios de cobro</a></li>
+            <li class="list-object"><a href="#">Más soluciones</a></li>
+            <li class="list-object"><a href="#">Beneficios</a></li>
           </ul>
-        </nav>
-        <ul class="header__buttons">
-          <li class="header__nav-item">
-            <a href="./index.html" class="btn-secondary">Espacio Nave</a>
-          </li>
-          <li class="header__nav-item">
-            <a href="./index.html" class="btn-primary">Entrar a Nave</a>
-          </li>
-        </ul>
-      </div>
+
+          <div class="right-group">
+            <div class="divider"></div>
+            <div class="header-buttons">
+              <a
+                href="https://navenegocios.ar/blog"
+                class="button-header button-line"
+                >Espacio Nave</a
+              >
+              <a
+                href="https://www.navenegocios.com/login"
+                class="button-header button-finish"
+                >Entrar a Nave</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
+    <!-- usamos espaciadores para separar secciones -->
+    <main>
+      <div class="space-a"></div>
+
+      <div>
+        <section class="container seccion-beneficios">
+          <h1 class="main-title">
+            Te damos la bienvenida al vuelo de tu negocio
+          </h1>
+          <div class="space-a"></div>
+
+          <div class="cards-block">
+            <div class="card">
+              <div class="icon-container">
+                <img
+                  src="./images/1.png"
+                  alt="Icono de billete, representa la acreditación de ventas"
+                  class="icon-image"
+                />
+              </div>
+              <br />
+              <h3>Elegí cuándo acreditar tus ventas</h3>
+              <p>Lo hacés desde la plataforma Nave en pocos clicks.</p>
+            </div>
+
+            <div class="card">
+              <div class="icon-container">
+                <img
+                  src="./images/2.png"
+                  alt="Icono de gráfico de crecimiento, representa costos bajos"
+                  class="icon-image"
+                />
+              </div>
+              <br />
+              <h3>Ganás más con costos bajos</h3>
+              <p>Los costos por cobro son bajos para que tu negocio crezca.</p>
+            </div>
+
+            <div class="card">
+              <div class="icon-container">
+                <img
+                  src="./images/3.png"
+                  alt="Icono de rueda de engranaje, representa promociones personalizadas"
+                  class="icon-image"
+                />
+              </div>
+              <br />
+              <h3>Vendés más con promos a tu medida</h3>
+              <p>Ofrecé nuestras promos cuando pagan en tu negocio.</p>
+            </div>
+          </div>
+
+          <div class="banner-stories">
+            <div class="banner-text">
+              <h3>Historias que vuelan</h3>
+              <p>Conocé a los comercios que eligen Nave todos los días 💜</p>
+            </div>
+            <a
+              href="https://navenegocios.ar/blog/nosotros"
+              class="btn btn-white"
+              >Conocer más</a
+            >
+          </div>
+        </section>
+      </div>
+
+      <div class="space-b"></div>
+
+      <div class="container seccion-metodos">
+        <h2 class="main-title">Encontrá el medio de cobro ideal</h2>
+        <p class="main-subtitle">
+          Elegí las opciones que mejor se ajustan a tu negocio.
+        </p>
+
+        <div class="metodos-grid reverse-layout">
+          <div class="metodo-card reverse-layout">
+            <div class="metodo-info">
+              <h3>QR</h3>
+              <p>
+                Ideal para cobrar en tu local o desde donde prefieras sin
+                manejar efectivo.
+              </p>
+              <a
+                href="https://navenegocios.ar/home/cobrar-con-qr"
+                class="btn btn-primary"
+                >Conocer más</a
+              >
+            </div>
+
+            <div class="metodo-img">
+              <img
+                src="./images/img_qr.png"
+                alt="Ilustración de un código QR"
+              />
+            </div>
+          </div>
+
+          <div class="metodo-card">
+            <div class="metodo-img">
+              <img
+                src="./images/img_terminal.png"
+                alt="Ilustracion de la Terminal de punto de venta Nave Point"
+              />
+            </div>
+
+            <div class="metodo-info">
+              <h3>Terminal Nave Point</h3>
+              <p>
+                Aceptá pagos con tarjetas de débito y crédito en tu local de
+                forma rápida y segura.
+              </p>
+              <a
+                href="https://navenegocios.ar/home/cobrar-con-nave-point"
+                class="btn btn-primary"
+                >Conocer más</a
+              >
+            </div>
+          </div>
+
+          <div class="metodo-card reverse-layout">
+            <div class="metodo-info">
+              <h3>Link de Pago</h3>
+              <p>
+                La forma más fácil de vender por chat y redes sociales. Compartí
+                el link y cobrá desde cualquier lugar.
+              </p>
+              <a
+                href="https://navenegocios.ar/home/cobrar-con-link-de-pago"
+                class="btn btn-primary"
+                >Conocer más</a
+              >
+            </div>
+
+            <div class="metodo-img">
+              <img
+                src="./images/chat.png"
+                alt="Ilustración de un chat en un móvil"
+              />
+            </div>
+          </div>
+
+          <div class="metodo-card">
+            <div class="metodo-img">
+              <img
+                src="./images/tiendaonline.png"
+                alt="Ilustracion ed una tienda on line"
+              />
+            </div>
+
+            <div class="metodo-info">
+              <h3>Tienda online</h3>
+              <p>
+                Ofrecé una experiencia de pago sin fricciones aceptando pagos
+                con todos los medios de cobro.
+              </p>
+              <a
+                href="https://navenegocios.ar/home/cobrar-con-tienda-online"
+                class="btn btn-primary"
+                >Conocer más</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="brand-logo">
+          <img
+            src="./images/LogoNave-Mobile.jpg"
+            class="brand-logo"
+            alt="Logo Nave Negocios"
+          />
+        </div>
+
+        <div class="footer-columns">
+          <div class="footer-col">
+            <h4>Nave</h4>
+            <ul class="footer-list">
+              <li><a href="https://navenegocios.ar/home">Cobrá con Nave</a></li>
+              <li>
+                <a href="https://www.navenegocios.com/login">Entrar a Nave</a>
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/blog">El blog de Nave</a>
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/como-entro-a-nave"
+                  >Empezar a cobrar</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://hacetecliente.galicia.ar/solucionesdecobro/latest/index.html?"
+                  >Abrir cuenta en Galicia</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/cobranzas-integradas"
+                  >Cobranzas integradas</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/developers"
+                  >Nave Developers</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/integraciones"
+                  >Integraciones</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4>Medios de cobro</h4>
+            <ul class="footer-list">
+              <li>
+                <a href="https://navenegocios.ar/home/cobrar-con-qr"
+                  >Cobrá con QR</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/cobrar-con-tienda-online"
+                  >Cobrá por tu tienda online</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/cobrar-con-link-de-pago"
+                  >Cobrá con Link de pago</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/cobrar-con-nave-point"
+                  >Cobrá con Nave Point</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4>Beneficios</h4>
+            <ul class="footer-list">
+              <li>
+                <a href="https://navenegocios.ar/home/promociones"
+                  >Promociones</a
+                >
+              </li>
+              <li>
+                <a href="https://navenegocios.ar/home/promociones/mapa-de-nave"
+                  >Mapa de Nave</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4>Te puede interesar</h4>
+            <ul class="footer-list">
+              <li><a href="https://www.galicia.ar/personas">Galicia</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
