--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="container-nav">
-          <div class="logo">
+          <div class="logo-dek">
             <a href="https://navenegocios.ar/home">
               <img
                 src="./images/Logo Nave.jpg"
@@ -63,17 +63,17 @@
             <li class="list-object"><a href="#">Beneficios</a></li>
           </ul>
 
-          <div class="right-group">
+          <div class="right-buttons">
             <div class="divider"></div>
             <div class="header-buttons">
               <a
                 href="https://navenegocios.ar/blog"
-                class="button-header button-line"
+                class="button-header button-1"
                 >Espacio Nave</a
               >
               <a
                 href="https://www.navenegocios.com/login"
-                class="button-header button-finish"
+                class="button-header button-2"
                 >Entrar a Nave</a
               >
             </div>
@@ -83,73 +83,69 @@
     </header>
     <!-- usamos espaciadores para separar secciones -->
     <main>
-      <div class="space-a"></div>
+      <div class="space-1"></div>
 
-      <div>
-        <section class="container seccion-beneficios">
-          <h1 class="main-title">
-            Te damos la bienvenida al vuelo de tu negocio
-          </h1>
-          <div class="space-a"></div>
+      <section class="container seccion-beneficios">
+        <h1 class="main-title">
+          Te damos la bienvenida al vuelo de tu negocio
+        </h1>
+        <div class="space-1"></div>
 
-          <div class="cards-block">
-            <div class="card">
-              <div class="icon-container">
-                <img
-                  src="./images/1.png"
-                  alt="Icono de billete, representa la acreditación de ventas"
-                  class="icon-image"
-                />
-              </div>
-              <br />
-              <h3>Elegí cuándo acreditar tus ventas</h3>
-              <p>Lo hacés desde la plataforma Nave en pocos clicks.</p>
+        <div class="cards-block">
+          <div class="card">
+            <div class="icon-container">
+              <img
+                src="./images/1.png"
+                alt="Icono de manito con billete"
+                class="icon-image"
+              />
             </div>
-
-            <div class="card">
-              <div class="icon-container">
-                <img
-                  src="./images/2.png"
-                  alt="Icono de gráfico de crecimiento, representa costos bajos"
-                  class="icon-image"
-                />
-              </div>
-              <br />
-              <h3>Ganás más con costos bajos</h3>
-              <p>Los costos por cobro son bajos para que tu negocio crezca.</p>
-            </div>
-
-            <div class="card">
-              <div class="icon-container">
-                <img
-                  src="./images/3.png"
-                  alt="Icono de rueda de engranaje, representa promociones personalizadas"
-                  class="icon-image"
-                />
-              </div>
-              <br />
-              <h3>Vendés más con promos a tu medida</h3>
-              <p>Ofrecé nuestras promos cuando pagan en tu negocio.</p>
-            </div>
+            <br />
+            <h3>Elegí cuándo acreditar tus ventas</h3>
+            <p>Lo hacés desde la plataforma Nave en pocos clicks.</p>
           </div>
 
-          <div class="banner-stories">
-            <div class="banner-text">
-              <h3>Historias que vuelan</h3>
-              <p>Conocé a los comercios que eligen Nave todos los días 💜</p>
+          <div class="card">
+            <div class="icon-container">
+              <img
+                src="./images/2.png"
+                alt="Icono de gráfico"
+                class="icon-image"
+              />
             </div>
-            <a
-              href="https://navenegocios.ar/blog/nosotros"
-              class="btn btn-white"
-              >Conocer más</a
-            >
+            <br />
+            <h3>Ganás más con costos bajos</h3>
+            <p>Los costos por cobro son bajos para que tu negocio crezca.</p>
           </div>
-        </section>
-      </div>
 
-      <div class="space-b"></div>
+          <div class="card">
+            <div class="icon-container">
+              <img
+                src="./images/3.png"
+                alt="Icono de rueda de engranaje con el signo pesos"
+                class="icon-image"
+              />
+            </div>
+            <br />
+            <h3>Vendés más con promos a tu medida</h3>
+            <p>Ofrecé nuestras promos cuando pagan en tu negocio.</p>
+          </div>
+        </div>
 
-      <div class="container seccion-metodos">
+        <div class="banner-stories">
+          <div class="banner-text">
+            <h3>Historias que vuelan</h3>
+            <p>Conocé a los comercios que eligen Nave todos los días 💜</p>
+          </div>
+          <a href="https://navenegocios.ar/blog/nosotros" class="btn btn-white"
+            >Conocer más</a
+          >
+        </div>
+      </section>
+
+      <div class="space-2"></div>
+
+      <section class="container seccion-metodos">
         <h2 class="main-title">Encontrá el medio de cobro ideal</h2>
         <p class="main-subtitle">
           Elegí las opciones que mejor se ajustan a tu negocio.
@@ -171,10 +167,7 @@
             </div>
 
             <div class="metodo-img">
-              <img
-                src="./images/img_qr.png"
-                alt="Ilustración de un código QR"
-              />
+              <img src="./images/img_qr.png" alt="Imagen cartel código QR" />
             </div>
           </div>
 
@@ -182,7 +175,7 @@
             <div class="metodo-img">
               <img
                 src="./images/img_terminal.png"
-                alt="Ilustracion de la Terminal de punto de venta Nave Point"
+                alt="imagen de la Terminal de cobro Nave"
               />
             </div>
 
@@ -217,7 +210,7 @@
             <div class="metodo-img">
               <img
                 src="./images/chat.png"
-                alt="Ilustración de un chat en un móvil"
+                alt="Imagen celular con chat en pantalla"
               />
             </div>
           </div>
@@ -226,7 +219,7 @@
             <div class="metodo-img">
               <img
                 src="./images/tiendaonline.png"
-                alt="Ilustracion ed una tienda on line"
+                alt="Imaen pc navegando en tienda online"
               />
             </div>
 
@@ -244,7 +237,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer">
